# check-datapackage

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  class_index.html  function_index.html  index.html  index.qmd  justfile  pyproject.toml  status.json  z_49323f71a9ce0929___init___py.html  z_49323f71a9ce0929_check_error_matcher_py.html  z_49323f71a9ce0929_check_error_py.html  z_49323f71a9ce0929_check_py.html  z_49323f71a9ce0929_cli_py.html  z_49323f71a9ce0929_config_py.html  z_49323f71a9ce0929_constants_py.html  z_49323f71a9ce0929_custom_check_py.html  z_49323f71a9ce0929_examples_py.html  z_49323f71a9ce0929_exclude_matching_errors_py.html  z_49323f71a9ce0929_exclude_py.html  z_49323f71a9ce0929_exclusion_py.html  z_49323f71a9ce0929_extensions_py.html  z_49323f71a9ce0929_internals_py.html  z_49323f71a9ce0929_issue_py.html  z_49323f71a9ce0929_read_json_py.html  z_49323f71a9ce0929_rule_py.html
.github/workflows/: release-package.yml
docs/: index.qmd  site-counter.html
docs/design/: architecture.qmd  index.qmd  interface.qmd
docs/design/interface/: cli.qmd  config.qmd  index.qmd  inputs.qmd  outputs.qmd  python.qmd
docs/guide/: check.qmd  checks.qmd  cli.qmd  config-file.qmd  config.qmd  index.qmd  installation.qmd  issues.qmd
docs/includes/: _badges.qmd  _contributors.qmd  _design-status.qmd  _pretty_repr.qmd  site-counter.html
src/check_datapackage/: __init__.py  check.py  check_error_matcher.py  check_package_properties.py  check_properties.py  check_resource_properties.py  cli.py  config.py  constants.py  custom_check.py  examples.py  exclude.py  exclude_matching_errors.py  exclusion.py  extensions.py  internals.py  issue.py  read_json.py  read_properties.py  rule.py
tests/: conftest.py  test_check.py  test_check_custom_error_mapping.py  test_check_error.py  test_check_error_matcher.py  test_check_package_properties.py  test_check_properties.py  test_check_resource_properties.py  test_cli.py  test_custom_check.py  test_exclude.py  test_exclude_matching_errors.py  test_exclusion.py  test_extensions.py  test_read_json.py  test_rule.py  test_traceback_suppression.py
tools/: vulture-allowlist.py
