[project]
name = "check-datapackage"
version = "0.1.0"
# TODO: Add a description of the package.
description = ""
authors = [
  {name = "Luke William Johnston", email = "lwjohnst@gmail.com" },
  # TODO: Add more authors as needed.
]
maintainers = [
  {name = "Luke William Johnston", email = "lwjohnst@gmail.com" },
  # TODO: Add more maintainers as needed.
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "types-jsonschema>=4.25.1.20250822",
]

[project.urls]
homepage = "https://check-datapackage.seedcase-project.org"
repository = "https://github.com/seedcase-project/check-datapackage"
changelog = "https://github.com/seedcase-project/check-datapackage/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/check-datapackage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "commitizen>=4.8.3",
    "genbadge>=1.1.2",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "quartodoc>=0.11.1",
    "ruff>=0.12.11",
    "types-tabulate>=0.9.0.20241207",
    "typos>=1.35.6",
    "vulture>=2.14",
]
